[package]
authors = ["Simsys <winfried.simon@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32f4-blinky"
version = "0.1.0"

[workspace]

[dependencies.rtic]
version = "2.0.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "2.0.0"
features = ["cortex-m-systick"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies]
embedded-hal = "0.2.7"
panic-rtt-target = { version = "0.1.3" }
rtt-target = { version = "0.5.0" }

[dependencies.stm32f4xx-hal]
features = ["stm32f405"]
version = "0.22.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f4-blinky"
test = false
bench = false

[profile.dev]
opt-level = 3
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
