[package]
name = "hactar-ctl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hactar-ctl"
path = "src/main.rs"

[dependencies]
rand = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Serial",
    "SerialPort",
    "SerialOptions",
    "SerialPortRequestOptions",
    "ReadableStream",
    "WritableStream",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "ParityType",
] }
