[package]
name = "hactar-ui-stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.6.1", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
hactar-platform-stm32 = { version = "0.1.0", path = "../hactar-platform-stm32" }
hactar-ui = { version = "0.1.0", path = "../hactar-ui" }
