[package]
name = "hactar-ui-stm32"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "s"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["stm32f405rg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["tick-hz-32_768"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

hactar-platform-stm32 = { version = "0.1.0", path = "../hactar-platform-stm32" }
hactar-ui = { version = "0.1.0", path = "../hactar-ui" }
